<resources>
    <string name="app_name" translatable="false">Munchkin</string>
    <string name="createLobby">Create lobby</string>
    <string name="findLobby">Find lobby</string>
    <string name="playWithFriends">Play with friends</string>
    <string name="wrongNickNameLength">Nickname length must be from 3 to 20 symbols</string>
    <string name="wrongEmailAddress">Email address is wrong</string>
    <string name="wrongPasswordLength">Password length must be longer than 6 symbols</string>
    <string name="thisNickNameExists">This nickname already exists</string>
    <string name="thisEmailExists">This email already exists</string>
    <string name="incorrectEmail">Incorrect email</string>
    <string name="incorrectPassword">Incorrect password</string>
    <string name="noConnection">No connection</string>
    <string name="friends">Friends</string>
    <string name="subscribers">Subscribers</string>
    <string name="remove">Remove</string>
    <string name="sendRequest">Send request</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="forFriendsOnly">For friends only</string>
    <string name="playersMax">Players</string>
    <string name="start">Start</string>
    <string name="waiting">Waiting</string>
    <string name="noLobbyFound">No lobby found</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">No account yet? Create one</string>
    <string name="nickname">Nickname</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="have_an_account">Have an account already? Login</string>
    <string name="language">Language</string>
    <string name="restart_to_apply_changes">You need to restart to apply changes</string>
</resources>
