<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    tools:context=".main.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_marginTop="4pt"
            android:layout_marginStart="4pt"
            android:layout_width="25pt"
            android:layout_height="25pt"
            android:background="@drawable/logout"
            android:backgroundTint="#aaaaaa"
            android:onClick="exit">

        </Button>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15pt"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:layout_width="150pt"
                android:layout_height="30pt"
                android:onClick="createLobby"
                android:text="@string/createLobby" />

            <Button
                android:layout_width="150pt"
                android:layout_height="30pt"
                android:onClick="findLobby"
                android:text="@string/findLobby" />

            <Button
                android:layout_width="150pt"
                android:layout_height="30pt"
                android:onClick="playWithFriends"
                android:text="@string/playWithFriends" />
        </LinearLayout>
        <FrameLayout android:layout_height="match_parent"
            android:layout_width="90pt"
            android:layout_alignParentEnd="true"
            android:id="@+id/friendListFrame">
        </FrameLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>